[package]
name = "quantized-density-fields"
version = "0.2.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Rust implementation of Quantized Density Fields data structure."
repository = "https://github.com/PsichiX/quantized-density-fields"
readme = "README.md"
keywords = ["data-structure","graph","multidimensional"]
categories = ["data-structures","science"]
license = "MIT"
documentation = "https://docs.rs/quantized-density-fields"

[dependencies]
uuid = { version = "0.7.1", features = ["serde", "v4"] }
petgraph = "0.4.13"
rayon = "1.0.2"
